--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      </header>
 
      <div class="intro"> 
-               <div class="hello">
+        <div class="hello">
                    <h1>Hello!<br>
                     My name is Maksym Shveda.</h1>
                     <h2>And I am a Front-End developer.</h2>
@@ -28,10 +28,15 @@
                 <a href="#" class="contactbuttons"><img src="img/github.png" class="contactimages"/></a>
                 <a href="#" class="contactbuttons"><img src="img/gmail.png" class="contactimages"/></a>
            </div></div>
-           <div class="details"><p>And there is a text<br>with a lot of my dreams<br>describing why<br>I am pretty good Developer.</p></div>
+        <div class="details"><p>And there is a text<br>with a lot of my dreams<br>describing why<br>I am pretty good Developer.</p></div>
            </div>
-           <div class="aboutme"><h1>About Me</h1><p> Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah</p>
-           </p></div>
+        <div class="aboutme"><h1>About Me</h1><p> Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah</p>
+           </p>
+           <div class="aboutmeheads"><h2>AboutMe1</h2><p>I Am a hard-working person.</p></div>
+           <div class="aboutmeheads"><h2>AboutMe2</h2><p>I Am a disciplined person.</p></div>
+           <div class="aboutmeheads"><h2>AboutMe3</h2><p>I Am always educating and upgrading my skills.</p></div>
+           <div class="aboutmeheads"><h2>AboutMe4</h2><p>I Want to change the Internet and make it better.</p></div>
+        </div>
            </main>
      </body>
 </html>
