--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
            </div></div>
         <div class="details"><p>And there is a text<br>with a lot of my dreams<br>describing why<br>I am pretty good Developer.</p></div>
            </div>
-        <div class="aboutme"><h1>About Me</h1><p> Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah</p>
-           </p>
+        <div class="aboutme"><div class="aboutmemain"><h1>About Me</h1><p> Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah<br>Blah-Blah-Blah-Blah</p>
+           </p></div>
            <div class="aboutmeheads"><h2>AboutMe1</h2><p>I Am a hard-working person.</p></div>
            <div class="aboutmeheads"><h2>AboutMe2</h2><p>I Am a disciplined person.</p></div>
            <div class="aboutmeheads"><h2>AboutMe3</h2><p>I Am always educating and upgrading my skills.</p></div>
