--- a/TimeTrackingLand/index.html
+++ b/TimeTrackingLand/index.html
@@ -13,7 +13,11 @@
 			<header>
 				
 	<img src="images/logo.png" class="logo"/>
-	<nav class="nav">
+	<nav>
+		<button class="navbutton">
+			<img src="images/menu.svg" class="menubutton" />
+			<p>Menu</p>
+		</button>
 		<a href="#" class="NavigationItem">Features</a>
 		<a href="#" class="NavigationItem">Pricing</a>
 		<a href="#" class="NavigationItem">Why Gravity</a>
@@ -25,7 +29,7 @@
 				<div class="hightext">
 					<h1>Simple Time Tracking.<br>
 					Powerful reporting.</h1>
-				<h2>Turn Your team on to productivity with Gravity the time<br> tracker.</h2></div>
+				<h2>Turn Your team on to productivity with Gravity the time tracker.</h2></div>
 				<button class="button">Request early access</button>
 				</div>
 				<img src="images/dude2.png" class="dude"/>
